2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Manifest.addin.xml: Extension point location has changed.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Backend.Mdb.mdp: Fix reference to Mono.TextEditor. The
	  incorrect add-in version number causes problems in the makefile
	  synchronization.

2008-08-06  Lluis Sanchez Gual <lluis@novell.com> 

	* IDebuggerController.cs, MonoDebuggerSession.cs,
	  Mono.Debugging.Backend.Mdb.mdp, DebuggerController.cs: Add support
	  for live hit count and trace updating.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs, IDebuggerServer.cs: Implement support for
	  catchpoints.

2008-07-11  Lluis Sanchez Gual <lluis@novell.com> 

	* IDebuggerController.cs, MonoDebuggerSession.cs, IDebuggerServer.cs,
	  DebuggerController.cs: Track api changes to support custom
	  breakpoint hit actions.
	* MonoDebuggerSessionFactory.cs: Fix construction process command line
	  string.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile: Install the assemblies to the correct directory.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs, IDebuggerServer.cs: Implemented
	  SetActiveThread. Ignore target events coming from non-stopped
	  threads.

2008-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs, IDebuggerServer.cs, Makefile: Implement
	  support for modifying variable values and disassembling files.

2008-07-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs: Track api changes.
	* DebuggerController.cs: Use tcp by default. Fire target even after
	  forcing the debugger to stop.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Backend.Mdb.mdp, DebuggerController.cs, Makefile:
	  Enable unix channel support.

2008-06-26  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDebuggerSession.cs, IDebuggerServer.cs: Implement GetThreads and
	  GetProcesses.
