@@ -1,3 +1,8 @@
+2008-09-03  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* DebuggerServer.cs: Fill the Exception property for the Exception and
+	  UnhandledException events.
+
 2008-08-29  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* DebuggerServer.cs: Fix build.
