@@ -1,3 +1,7 @@
+2008-09-03  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDebuggerSession.cs: Track api changes.
+
 2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Manifest.addin.xml: Extension point location has changed.
